2008-10-03  Steve Falkenburg  <sfalken@apple.com>

        <rdar://problem/6249833> Fix default button appearance
        
        Reviewed by Adele Peterson.

        * rendering/RenderThemeWin.cpp:
        (WebCore::RenderThemeWin::supportsFocus):
        (WebCore::RenderThemeWin::determineClassicState):
        (WebCore::RenderThemeWin::determineButtonState):
        (WebCore::RenderThemeWin::getClassicThemeData):
        (WebCore::RenderThemeWin::getThemeData):
        (WebCore::drawControl):
        * rendering/RenderThemeWin.h:

2008-10-06  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon.

        Add native virtual keycode to PlatformKeyboardEvent

        * platform/PlatformKeyboardEvent.h:
        * platform/gtk/KeyEventGtk.cpp:
        (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):
        * platform/mac/KeyEventMac.mm:
        (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):
        * platform/qt/PlatformKeyboardEventQt.cpp:
        (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):
        * platform/win/KeyEventWin.cpp:
        (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):
        * platform/wx/KeyboardEventWx.cpp:
        (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):

2008-10-06  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon.

        Enable WebCore::String <> CFStringRef conversion functions for QtWebKit/Mac

        * platform/text/PlatformString.h:
        * platform/text/StringImpl.h:
        * platform/text/cf/StringCF.cpp:
        * platform/text/cf/StringImplCF.cpp:

2008-10-06  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon.

        Use bundles on QtWebKit/Mac for platform modules

        * platform/FileSystem.h:
        * platform/qt/FileSystemQt.cpp:
        (WebCore::unloadModule):

2008-10-06  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Reviewed by Simon.

        Build fix for MinGW.
